attempting to fix team card hover/card click issues on mobile

--- a/frontend/src/styles/home-page.scss
+++ b/frontend/src/styles/home-page.scss
@@ -141,22 +141,50 @@
 		}
 	}
 
-	// 	.testimonials {
-	// 		// background: #1e3856;
-	// 		background: white;
-	// 		color: $primary;
-	// 		padding-bottom: 4em;
-	// 		margin-bottom: 50em;
-	//
-	// 		&-inner {
-	// 			// background: $primary;
-	// 			border: 1px solid blue;
-	// 			padding: 2em;
-	// 			// position: relative;
-	//
-	//
-	// 		}
-	// 	}
+	.testimonials {
+		padding: 1em;
+		background: white;
+		// min-height: 370px;
+		overflow: hidden;
+		position: relative;
+
+		.slider-wrapper {
+			display: grid;
+			grid-template-columns: 1fr;
+		}
+
+		.slide {
+			padding: 2em;
+			width: 100%;
+			grid-row-start: 1;
+			grid-column-start: 1;
+
+			.testifier-avi {
+				width: 60px;
+				height: 60px;
+				border-radius: 50%;
+				overflow: hidden;
+			}
+			.testimony {
+				font-size: 2rem;
+			}
+		}
+
+		.next,
+		.previous {
+			position: absolute;
+			top: 50%;
+			color: $secondary;
+			font-size: 1.8rem;
+			cursor: pointer;
+		}
+		.next {
+			right: 20px;
+		}
+		.previous {
+			left: 20px;
+		}
+	}
 
 	.our-team {
 		margin: 3.5em 0;
@@ -171,6 +199,8 @@
 				margin-bottom: 2em;
 				position: relative;
 				&-overlay {
+					background: rgba(22, 42, 62, 0.75);
+					backdrop-filter: blur(1.5px);
 					position: absolute;
 					width: 100%;
 					height: 100%;
@@ -178,11 +208,6 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
-
-					&:hover {
-						background: rgba(22, 42, 62, 0.75);
-						backdrop-filter: blur(1.5px);
-					}
 
 					&-inner {
 						// border: 1px solid red;
